# market-thingy

./: .gitignore  app.py  bootstrap.sh  market_watch.py  pyproject.toml  test.py  thingy.py
edgar/: README.txt  filing.py  financials.py
templates/: template.html
thingy/: collections.py  engine.py  engine.xml  market_watch.py  metric_handlers.py  state.py
thingy/edgar/: document.py  document_text.py  edgar.py  filing.py  financials.py  requests_wrapper.py  stock.py
thingy/templates/: template.html.mako
